2018-05-09  Leo Balter  <leonardo.balter@gmail.com>

        Fix Test262 Runner to have DYLD_FRAMEWORK_PATH always set
        https://bugs.webkit.org/show_bug.cgi?id=185488

        Reviewed by Michael Saboff.

        * Scripts/test262/Runner.pm:
        (processCLI):
        (getBuildPath):
        (runTest):

2018-05-09  Richard Houle  <rhoule@apple.com>

        [Cocoa] Some fields are not identified as [WKWebProcessPlugInNodeHandle isTextField]
        https://bugs.webkit.org/show_bug.cgi?id=185260
        <rdar://problem/39290394>

        Reviewed by Tim Horton.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKitCocoa/InjectedBundleNodeHandleIsTextField.mm: Added.
        (-[InjectedBundleNodeHandleIsTextField isTextFieldForHTMLInputType:document:jsContext:]):
        (-[InjectedBundleNodeHandleIsTextField webProcessPlugIn:didCreateBrowserContextController:]):
        * TestWebKitAPI/Tests/WebKitCocoa/UIDelegate.mm:
        (-[InjectedBundleNodeHandleIsTextFieldDelegate webView:runJavaScriptAlertPanelWithMessage:initiatedByFrame:completionHandler:]):

2018-05-09  Thibault Saunier  <tsaunier@igalia.com>

        [tests][GStreamer]: Pass USE_PLAYBIN3 to the tests subprocess
        https://bugs.webkit.org/show_bug.cgi?id=185481

        Reviewed by Philippe Normand.

        [tests][GStreamer]: Pass USE_PLAYBIN3 to the tests subprocess

        * Scripts/webkitpy/port/gtk.py:
        (GtkPort.setup_environ_for_server):

2018-05-09  Leo Balter  <leonardo.balter@gmail.com>

        Set build.webkit.org to use the new Test262-runner
        https://bugs.webkit.org/show_bug.cgi?id=184933

        Reviewed by Aakash Jain.

        * BuildSlaveSupport/build.webkit.org-config/steps.py:
        (RunTest262Tests):
        (RunTest262Tests.countFailures):
        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:

2018-05-09  Carlos Eduardo Ramalho  <cadubentzen@gmail.com>
